Update 10.RabbitMQ - 发布确认.md
补充一点异步确认发布的相关参考代码

--- a/docs/04.框架/20.RabbitMQ/10.RabbitMQ - 发布确认.md
+++ b/docs/04.框架/20.RabbitMQ/10.RabbitMQ - 发布确认.md
@@ -120,10 +120,131 @@ public static void publishMessageBatch() throws Exception {
 
 
 
+```java
+//异步确认发布:但未处理确认发送失败的消息
+    public static void publishMessageAsync() throws Exception{
+        //获取信道
+        Channel channel = RabbitMqUtils.getChannel();
+        //队列声明
+        String queueName = UUID.randomUUID().toString();//生成队列名
+        channel.queueDeclare(queueName,true,false,false,null);
+        //开启发布确认
+        channel.confirmSelect();
+        //获取当前系统时间戳
+        long begin = System.currentTimeMillis();//开始时间
 
+        /**
+         * 消息发布成功的回调函数：
+         *      1.deliveryTag：消息在队列中的标识
+         *      2.multiple：是否为批量确认
+         */
+
+        ConfirmCallback ackCallback = (deliveryTag, multiple) ->{  //监视发布成功的消息
+            //打印发布成功的标识
+            System.out.println("发布成功的标识："+deliveryTag);
+        };
+        //消息发布失败的回调函数
+        ConfirmCallback nackCallback = (deliveryTag, multiple) ->{ //监视发布失败的消息
+            //打印发布失败的标识
+            System.out.println("发布失败的标识："+deliveryTag);
+        };
+        /**
+         *  配置一个异步监听器,需要手动实现两个接口：
+         *      1.ackCallback：消息发布成功的回调函数
+         *      2.nackCallback：消息发布失败的回调函数
+         */
+        channel.addConfirmListener(ackCallback,nackCallback);
+
+        //批量发布1000条信息
+        for (int i = 0; i < MaxCount; i++) {
+            String message = i + "";
+            channel.basicPublish("",queueName,null,message.getBytes());
+        }
+
+        long end = System.currentTimeMillis();//结束时间戳
+        System.out.println("异步确认发布：确认1000条消息，需要" + (end - begin) + "ms");
+
+        //关闭发送连接
+//        channel.close();
+    }
+```
 如何处理异步未确认消息?
 
 最好的解决的解决方案就是把未确认的消息放到一个基于内存的能被发布线程访问的队列， 比如说用 ConcurrentLinkedQueue 这个队列在 confirm callbacks 与发布线程之间进行消息的传递。
+
+```java
+//异步确认发布:处理异步未确认的消息
+    public static void publishMessageAsync() throws Exception {
+        //获取信道
+        Channel channel = RabbitMqUtils.getChannel();
+        //队列声明
+        String queueName = UUID.randomUUID().toString();//生成队列名
+        channel.queueDeclare(queueName, true, false, false, null);
+        //开启发布确认
+        channel.confirmSelect();
+
+
+        /**
+         * 线程安全有序的一个哈希表 适用于高并发的情况下
+         * 1、轻松地将序号与消息进行关联
+         * 2、轻松地批量删除，只要给到序号
+         * 3、支持高并发
+         */
+        ConcurrentNavigableMap<Long, String> outstandingConfirms = new ConcurrentSkipListMap<>();
+
+        /**
+         * 消息发布成功的回调函数：
+         *      1.deliveryTag：消息在队列中的标识
+         *      2.multiple：是否为批量确认
+         */
+        ConfirmCallback ackCallback = (deliveryTag, multiple) -> {  //监视发布成功的消息
+            //2.删除确认发布成功的消息,剩下的就是未确认的消息
+            if (multiple) {
+                //如果是批量确认，则批量清除
+                ConcurrentNavigableMap<Long, String> headMap = outstandingConfirms.headMap(deliveryTag);
+                headMap.clear();    //清除
+            }else {
+                //非批量确认，就单个清除
+                outstandingConfirms.remove(deliveryTag);
+            }
+
+            //打印发布成功的标识
+            System.out.println("发布成功的标识：" + deliveryTag);
+        };
+        //消息发布失败的回调函数
+        ConfirmCallback nackCallback = (deliveryTag, multiple) -> { //监视发布失败的消息
+
+            //3. 打印一下未确认的消息都有哪些
+            String message = outstandingConfirms.get(deliveryTag);
+            System.out.println("发布失败的标识：" + deliveryTag + "\n发布失败的消息内容：" + message);
+        };
+
+        /**
+         *  配置一个异步监听器,需要手动实现两个接口：
+         *      1.ackCallback：消息发布成功的回调函数
+         *      2.nackCallback：消息发布失败的回调函数
+         */
+        channel.addConfirmListener(ackCallback, nackCallback);
+
+        //获取当前系统时间戳
+        long begin = System.currentTimeMillis();//开始时间
+        //批量发布1000条信息
+        for (int i = 0; i < MaxCount; i++) {
+            String message = i + "";
+            channel.basicPublish("", queueName, null, message.getBytes());
+
+            //1.利用线程安全有序的一个哈希表，记录发布的每一条消息：
+            //getNextPublishSeqNo():获取信道里面下一条发布消息的顺序标识
+            outstandingConfirms.put(channel.getNextPublishSeqNo(), message);
+        }
+
+        long end = System.currentTimeMillis();//结束时间戳
+        System.out.println("异步确认发布：确认1000条消息，需要" + (end - begin) + "ms");
+
+        //关闭发送连接
+//        channel.close();
+    }
+```
 
 **以上 3 种发布确认速度对比 :**
 
